correct about section grid alignment

--- a/main.css
+++ b/main.css
@@ -422,10 +422,66 @@ footer h4 span{
         display: block;
     }
 
+    .about{
+        top: -179px;
+        margin: 0 50px 0 50px;
+        height: 100vh;
+    }
+
+    .about ul{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 25px;
+    }
+
+    .about-card{
+        width: 100%;
+        height: 100%;
+    }
+
+    .about-card-text h4{
+        font-size: 20px;
+    }
+
+    .about-card-text{
+        font-size: 10px;
+    }
+
+    .about-card:nth-child(1){
+        grid-column: 2 / 4;
+        grid-row: 1 / 2;
+    }
+
+    .about-card:nth-child(2){
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+
+    .about-card:nth-child(3){
+        grid-column: 3 / 5;
+        grid-row: 2 / 3;
+    }
+
+
+
+
+    
+    .partners{
+        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
     .partner-logo{
-        color: #000;
+        float: left;
+        margin: 0 10px 0 10px;
+        list-style: none;
+        color: #b3b3b3;
         font-size: 40px;
     }
+
 }
 
 
